--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,11 +26,10 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run:  apt-get install ffmpeg  && ffmpeg -version
+      - name: install ffmpeg
+        run:  sudo apt-get install ffmpeg  
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ffmpeg -version
