--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,3 +35,5 @@ jobs:
           ffmpeg -version
           pwd
           curl http://cip.cc
+          sudo apt install speedtest-cli
+          speedtest
