--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,39 +1,56 @@
-# This is a basic workflow to help you get started with Actions
+name: Batch Download and Release Videos
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      urls:
+        description: '请填写docker镜像名称,多个用英文逗号分开'
+        required: true
+  push:
+    branches:
+      - main  # 触发工作流的分支，可以根据需要更改
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 运行工作流的虚拟环境
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: install ffmpeg
-        run:  sudo apt-get install ffmpeg  
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg zip
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          ffmpeg -version
-          pwd
-          curl http://cip.cc
-          sudo apt install speedtest-cli
-          speedtest
+    - name: Batch download videos
+      run: |
+        VIDEO_URLS="${{ github.event.inputs.urls }}"
+        for url in $VIDEO_URLS; do
+          curl -L -o "${url##*/}" "$url"
+        done
+
+    - name: Create zip file
+      run: |
+        zip -r videos.zip *.mp4  # 假设所有视频都是 mp4 格式
+
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+
+    - name: Upload zip to release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./videos.zip
+        asset_name: videos.zip
+        asset_content_type: application/zip
