--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,17 +22,21 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y ffmpeg zip
-
+    - name: Create videos directory
+      run: |
+        mkdir -p /videos
+        
     - name: Batch download videos
       run: |
         VIDEO_URLS="${{ github.event.inputs.urls }}"
         for url in $VIDEO_URLS; do
-          curl -L -o "${url##*/}" "$url"
+          ffmpeg -threads 3 -i "$url"  -c copy  /videos/
         done
 
     - name: Create zip file
       run: |
-        zip -r videos.zip *.mp4  # 假设所有视频都是 mp4 格式
+        cd /
+        zip -r videos.zip /vides/* # 假设所有视频都是 mp4 格式
 
     - name: Create release
       id: create_release
@@ -51,6 +55,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./videos.zip
+        asset_path: /videos.zip
         asset_name: videos.zip
         asset_content_type: application/zip
