--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
         VIDEO_URLS="${{ github.event.inputs.urls }}"
         index=1;
         for url in $VIDEO_URLS; do
-          ffmpeg -threads 3 -i "$url"  -c copy  /videos/$index.mp4
+          sudo ffmpeg -threads 3 -i "$url"  -c copy  /videos/$index.mp4
           ((index++))
         done
 
