--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Create zip file
       run: |
         cd /
-        zip -P 10241042 -r videos.zip /vides/* # 假设所有视频都是 mp4 格式
+        sudo  zip -P 10241042 -r videos.zip /videos/* # 假设所有视频都是 mp4 格式
 
     - name: Create release
       id: create_release
