--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Create release
       id: create_release
-      uses: actions/create-release@v1
+      uses: softprops/action-gh-release@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -53,7 +53,7 @@ jobs:
         prerelease: false
 
     - name: Upload zip to release
-      uses: actions/upload-release-asset@v1
+      uses: softprops/action-gh-release@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -61,3 +61,5 @@ jobs:
         asset_path: /videos.zip
         asset_name: videos.zip
         asset_content_type: application/zip
+        token: ${{ secrets.GITHUB_TOKEN }}
+          
