--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,8 +47,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: DockerTarBuilder-AMD64
+        release_name: ${{ env.RELEASE_NAME }} for x86-64
         draft: false
         prerelease: false
 
