--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,8 +58,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: /videos.zip
-        asset_name: videos.zip
-        asset_content_type: application/zip
+        tag_name: DockerTarBuilder-AMD64
+        files: /videos.zip
         token: ${{ secrets.GITHUB_TOKEN }}
           
